# auto-tales

./: .env-sample  README.md  poem.txt  pyproject.toml
outputs/: cast_profiles.txt  final_video.txt  full_story.txt  revised_task_list.txt  scene_emotions.txt  scenes.txt  script.txt  video_segments.txt  voiceover.txt
src/auto_tales/: main.py
src/auto_tales/crews/poem_crew/: poem_crew.py
src/auto_tales/crews/production_crew/: production_crew.py
src/auto_tales/crews/production_crew/config/: agents.yaml  tasks.yaml
src/auto_tales/crews/production_crew/types/: schemas.py
src/auto_tales/tools/: llm_provider.py
