[project]
name = "auto_tales"
version = "0.1.0"
description = "auto-tales using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
]

[project.scripts]
kickoff = "auto_tales.main:kickoff"
run_crew = "auto_tales.main:kickoff"
plot = "auto_tales.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
